uparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
axiom' -> . axiom [ # ]
## Transitions:
-- On AXIOM shift to state 1
-- On axiom shift to state 351
## Reductions:

State 1:
## Known stack suffix:
## AXIOM
## LR(1) items:
axiom -> AXIOM . lident COLON term EOF [ # ]
## Transitions:
-- On LIDENT shift to state 2
-- On lident shift to state 3
## Reductions:

State 2:
## Known stack suffix:
## LIDENT
## LR(1) items:
lident -> LIDENT . [ WITH WHEN VARIANT UNDERSCORE UIDENT TRUE TILDE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES QUESTION PURE OR OPPREF OP4 OP3 OP2 OP1 MUTABLE MODIFIES MODEL LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ATTRIBUTE AS ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH WHEN VARIANT UNDERSCORE UIDENT TRUE TILDE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES QUESTION PURE OR OPPREF OP4 OP3 OP2 OP1 MUTABLE MODIFIES MODEL LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ATTRIBUTE AS ARROW AND AMPAMP
--   reduce production lident -> LIDENT

State 3:
## Known stack suffix:
## AXIOM lident
## LR(1) items:
axiom -> AXIOM lident . COLON term EOF [ # ]
## Transitions:
-- On COLON shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## AXIOM lident COLON
## LR(1) items:
axiom -> AXIOM lident COLON . term EOF [ # ]
## Transitions:
-- On UIDENT shift to state 5
-- On TRUE shift to state 6
-- On STRING shift to state 7
-- On STAR shift to state 8
-- On OPPREF shift to state 9
-- On OP4 shift to state 17
-- On OP3 shift to state 18
-- On OP2 shift to state 19
-- On OP1 shift to state 20
-- On OLD shift to state 21
-- On NOT shift to state 22
-- On MATCH shift to state 23
-- On LIDENT shift to state 2
-- On LET shift to state 24
-- On LEFTSQRIGHTSQ shift to state 10
-- On LEFTPAR shift to state 11
-- On LEFTBRCRIGHTBRC shift to state 15
-- On LEFTBRCCOLON shift to state 16
-- On LEFTBRC shift to state 156
-- On INTEGER shift to state 57
-- On IF shift to state 162
-- On FUN shift to state 163
-- On FORALL shift to state 175
-- On FLOAT shift to state 58
-- On FALSE shift to state 157
-- On EXISTS shift to state 176
-- On CHAR shift to state 158
-- On ATTRIBUTE shift to state 75
-- On uqualid shift to state 177
-- On uident shift to state 186
-- On term_sub_ shift to state 187
-- On term_dot_ shift to state 188
-- On term_dot shift to state 189
-- On term_block_ shift to state 192
-- On term_arg_ shift to state 193
-- On term_arg shift to state 194
-- On term_ shift to state 197
-- On term shift to state 349
-- On quant shift to state 206
-- On qualid shift to state 224
-- On prefix_op shift to state 225
-- On op_symbol shift to state 227
-- On mk_term(term_dot_) shift to state 228
-- On mk_term(term_arg_) shift to state 229
-- On mk_term(term_) shift to state 230
-- On lqualid shift to state 231
-- On lident_rich shift to state 182
-- On lident_op_id shift to state 183
-- On lident shift to state 232
-- On ident_rich shift to state 233
-- On constant shift to state 234
-- On attr shift to state 235
## Reductions:

State 5:
## Known stack suffix:
## UIDENT
## LR(1) items:
uident -> UIDENT . [ WITH WHEN VARIANT UNDERSCORE UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT AS ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH WHEN VARIANT UNDERSCORE UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT AS ARROW AND AMPAMP
--   reduce production uident -> UIDENT

State 6:
## Known stack suffix:
## TRUE
## LR(1) items:
term_arg_ -> TRUE . [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP
--   reduce production term_arg_ -> TRUE

State 7:
## Known stack suffix:
## STRING
## LR(1) items:
constant -> STRING . [ WITH WHEN VARIANT UNDERSCORE UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT AS ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH WHEN VARIANT UNDERSCORE UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT AS ARROW AND AMPAMP
--   reduce production constant -> STRING

State 8:
## Known stack suffix:
## STAR
## LR(1) items:
op_symbol -> STAR . [ UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE ]
## Transitions:
## Reductions:
-- On UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE
--   reduce production op_symbol -> STAR

State 9:
## Known stack suffix:
## OPPREF
## LR(1) items:
term_arg_ -> OPPREF . term_arg [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
term_dot_ -> OPPREF . term_dot [ DOT ]
## Transitions:
-- On UIDENT shift to state 5
-- On TRUE shift to state 6
-- On STRING shift to state 7
-- On OPPREF shift to state 9
-- On LIDENT shift to state 2
-- On LEFTSQRIGHTSQ shift to state 10
-- On LEFTPAR shift to state 11
-- On LEFTBRCRIGHTBRC shift to state 15
-- On LEFTBRCCOLON shift to state 16
-- On LEFTBRC shift to state 156
-- On INTEGER shift to state 57
-- On FLOAT shift to state 58
-- On FALSE shift to state 157
-- On CHAR shift to state 158
-- On uqualid shift to state 177
-- On uident shift to state 186
-- On term_sub_ shift to state 187
-- On term_dot_ shift to state 188
-- On term_dot shift to state 344
-- On term_block_ shift to state 192
-- On term_arg_ shift to state 267
-- On term_arg shift to state 345
-- On qualid shift to state 224
-- On mk_term(term_dot_) shift to state 228
-- On mk_term(term_arg_) shift to state 229
-- On lqualid shift to state 231
-- On lident_rich shift to state 182
-- On lident_op_id shift to state 183
-- On lident shift to state 232
-- On ident_rich shift to state 233
-- On constant shift to state 234
## Reductions:

State 10:
## Known stack suffix:
## LEFTSQRIGHTSQ
## LR(1) items:
term_block_ -> LEFTSQRIGHTSQ . [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP
--   reduce production term_block_ -> LEFTSQRIGHTSQ

State 11:
## Known stack suffix:
## LEFTPAR
## LR(1) items:
lident_op_id -> LEFTPAR . lident_op RIGHTPAR [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
term_block_ -> LEFTPAR . term RIGHTPAR [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
term_block_ -> LEFTPAR . RIGHTPAR [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
term_sub_ -> LEFTPAR . comma_list2(term) RIGHTPAR [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
-- On UIDENT shift to state 5
-- On TRUE shift to state 6
-- On STRING shift to state 7
-- On STAR shift to state 8
-- On RIGHTPAR shift to state 12
-- On OPPREF shift to state 13
-- On OP4 shift to state 17
-- On OP3 shift to state 18
-- On OP2 shift to state 19
-- On OP1 shift to state 20
-- On OLD shift to state 21
-- On NOT shift to state 22
-- On MATCH shift to state 23
-- On LIDENT shift to state 2
-- On LET shift to state 24
-- On LEFTSQRIGHTSQ shift to state 10
-- On LEFTSQ shift to state 32
-- On LEFTPAR shift to state 11
-- On LEFTBRCRIGHTBRC shift to state 15
-- On LEFTBRCCOLON shift to state 16
-- On LEFTBRC shift to state 156
-- On INTEGER shift to state 57
-- On IF shift to state 162
-- On FUN shift to state 163
-- On FORALL shift to state 175
-- On FLOAT shift to state 58
-- On FALSE shift to state 157
-- On EXISTS shift to state 176
-- On EQUAL shift to state 146
-- On DOT shift to state 147
-- On CHAR shift to state 158
-- On ATTRIBUTE shift to state 75
-- On uqualid shift to state 177
-- On uident shift to state 186
-- On term_sub_ shift to state 187
-- On term_dot_ shift to state 188
-- On term_dot shift to state 189
-- On term_block_ shift to state 192
-- On term_arg_ shift to state 193
-- On term_arg shift to state 194
-- On term_ shift to state 197
-- On term shift to state 346
-- On quant shift to state 206
-- On qualid shift to state 224
-- On prefix_op shift to state 225
-- On op_symbol shift to state 274
-- On mk_term(term_dot_) shift to state 228
-- On mk_term(term_arg_) shift to state 229
-- On mk_term(term_) shift to state 230
-- On lqualid shift to state 231
-- On lident_rich shift to state 182
-- On lident_op_id shift to state 183
-- On lident_op shift to state 152
-- On lident shift to state 232
-- On ident_rich shift to state 233
-- On constant shift to state 234
-- On comma_list2(term) shift to state 347
-- On attr shift to state 235
## Reductions:

State 12:
## Known stack suffix:
## LEFTPAR RIGHTPAR
## LR(1) items:
term_block_ -> LEFTPAR RIGHTPAR . [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP
--   reduce production term_block_ -> LEFTPAR RIGHTPAR

State 13:
## Known stack suffix:
## OPPREF
## LR(1) items:
lident_op -> OPPREF . option(UNDERSCORE) [ RIGHTPAR ]
term_arg_ -> OPPREF . term_arg [ UIDENT TRUE STRING STAR RIGHTPAR OR OPPREF OP4 OP3 OP2 OP1 LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER FLOAT FALSE EQUAL COMMA COLONCOLON COLON CHAR BARBAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
term_dot_ -> OPPREF . term_dot [ DOT ]
## Transitions:
-- On UNDERSCORE shift to state 14
-- On UIDENT shift to state 5
-- On TRUE shift to state 6
-- On STRING shift to state 7
-- On OPPREF shift to state 9
-- On LIDENT shift to state 2
-- On LEFTSQRIGHTSQ shift to state 10
-- On LEFTPAR shift to state 11
-- On LEFTBRCRIGHTBRC shift to state 15
-- On LEFTBRCCOLON shift to state 16
-- On LEFTBRC shift to state 156
-- On INTEGER shift to state 57
-- On FLOAT shift to state 58
-- On FALSE shift to state 157
-- On CHAR shift to state 158
-- On uqualid shift to state 177
-- On uident shift to state 186
-- On term_sub_ shift to state 187
-- On term_dot_ shift to state 188
-- On term_dot shift to state 344
-- On term_block_ shift to state 192
-- On term_arg_ shift to state 267
-- On term_arg shift to state 345
-- On qualid shift to state 224
-- On option(UNDERSCORE) shift to state 31
-- On mk_term(term_dot_) shift to state 228
-- On mk_term(term_arg_) shift to state 229
-- On lqualid shift to state 231
-- On lident_rich shift to state 182
-- On lident_op_id shift to state 183
-- On lident shift to state 232
-- On ident_rich shift to state 233
-- On constant shift to state 234
## Reductions:
-- On RIGHTPAR
--   reduce production option(UNDERSCORE) ->

State 14:
## Known stack suffix:
## UNDERSCORE
## LR(1) items:
option(UNDERSCORE) -> UNDERSCORE . [ RIGHTPAR ]
## Transitions:
## Reductions:
-- On RIGHTPAR
--   reduce production option(UNDERSCORE) -> UNDERSCORE

State 15:
## Known stack suffix:
## LEFTBRCRIGHTBRC
## LR(1) items:
term_block_ -> LEFTBRCRIGHTBRC . [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
## Reductions:
-- On WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP
--   reduce production term_block_ -> LEFTBRCRIGHTBRC

State 16:
## Known stack suffix:
## LEFTBRCCOLON
## LR(1) items:
term_block_ -> LEFTBRCCOLON . term COLONRIGHTBRC [ WITH VARIANT UIDENT TRUE THEN STRING STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OPPREF OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW LIDENT LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INVARIANT INTEGER IN FLOAT FALSE EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS CHAR BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
-- On UIDENT shift to state 5
-- On TRUE shift to state 6
-- On STRING shift to state 7
-- On STAR shift to state 8
-- On OPPREF shift to state 9
-- On OP4 shift to state 17
-- On OP3 shift to state 18
-- On OP2 shift to state 19
-- On OP1 shift to state 20
-- On OLD shift to state 21
-- On NOT shift to state 22
-- On MATCH shift to state 23
-- On LIDENT shift to state 2
-- On LET shift to state 24
-- On LEFTSQRIGHTSQ shift to state 10
-- On LEFTPAR shift to state 11
-- On LEFTBRCRIGHTBRC shift to state 15
-- On LEFTBRCCOLON shift to state 16
-- On LEFTBRC shift to state 156
-- On INTEGER shift to state 57
-- On IF shift to state 162
-- On FUN shift to state 163
-- On FORALL shift to state 175
-- On FLOAT shift to state 58
-- On FALSE shift to state 157
-- On EXISTS shift to state 176
-- On CHAR shift to state 158
-- On ATTRIBUTE shift to state 75
-- On uqualid shift to state 177
-- On uident shift to state 186
-- On term_sub_ shift to state 187
-- On term_dot_ shift to state 188
-- On term_dot shift to state 189
-- On term_block_ shift to state 192
-- On term_arg_ shift to state 193
-- On term_arg shift to state 194
-- On term_ shift to state 197
-- On term shift to state 342
-- On quant shift to state 206
-- On qualid shift to state 224
-- On prefix_op shift to state 225
-- On op_symbol shift to state 227
-- On mk_term(term_dot_) shift to state 228
-- On mk_term(term_arg_) shift to state 229
-- On mk_term(term_) shift to state 230
-- On lqualid shift to state 231
-- On lident_rich shift to state 182
-- On lident_op_id shift to state 183
-- On lident shift to state 232
-- On ident_rich shift to state 233
-- On constant shift to state 234
-- On attr shift to state 235
## Reductions:

State 17:
## Known stack suffix:
## OP4
## LR(1) items:
op_symbol -> OP4 . [ UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE ]
## Transitions:
## Reductions:
-- On UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE
--   reduce production op_symbol -> OP4

State 18:
## Known stack suffix:
## OP3
## LR(1) items:
op_symbol -> OP3 . [ UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE ]
## Transitions:
## Reductions:
-- On UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE
--   reduce production op_symbol -> OP3

State 19:
## Known stack suffix:
## OP2
## LR(1) items:
op_symbol -> OP2 . [ UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE ]
## Transitions:
## Reductions:
-- On UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE
--   reduce production op_symbol -> OP2

State 20:
## Known stack suffix:
## OP1
## LR(1) items:
op_symbol -> OP1 . [ UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE ]
## Transitions:
## Reductions:
-- On UNDERSCORE UIDENT TRUE TILDE STRING STAR RIGHTPAR QUESTION OPPREF OP4 OP3 OP2 OP1 OLD NOT MATCH LIDENT LET LEFTSQRIGHTSQ LEFTSQ LEFTPAR LEFTBRCRIGHTBRC LEFTBRCCOLON LEFTBRC INTEGER IF FUN FORALL FLOAT FALSE EXISTS CHAR ATTRIBUTE
--   reduce production op_symbol -> OP1

State 21:
## Known stack suffix:
## OLD
## LR(1) items:
term_ -> OLD . term [ WITH VARIANT THEN STAR SEMICOLON RIGHTSQ RIGHTPAR RIGHTBRC REQUIRES RAISES PURE OR OP4 OP3 OP2 OP1 MODIFIES LTGT LRARROW INVARIANT IN EQUIVALENT EQUAL EOF ENSURES ELSE DOTDOT DIVERGES CONSUMES COMMA COLONRIGHTBRC COLONCOLON COLON COERCION CHECKS BARBAR BAR BACKQUOTE_LIDENT ARROW AND AMPAMP ]
## Transitions:
-- On UIDENT shift to state 5
-- On TRUE shift to state 6
-- On STRING shift to state 7
-- On STAR shift to state 8
-- On OPPREF shift to state 9
-- On OP4 shift to state 17
-- On OP3 shift to state 18
-- On OP2 shift to state 19
-- On OP1 shift to state 20
-- On OLD shift to state 21
-- On NOT shift to state 22
-- On MATCH shift to state 23
-- On LIDENT shift to state 2
-- On LET shift to state 24
-- On LEFTSQRIGHTSQ shift to state 10
-- On LEFTPAR shift to state 11
-- On LEFTBRCRIGHTBRC shift to state 15
-- On LEFTBRCCOLON shift to state 16
-- On LEFTBRC shift to state 156
-- On INTEGER shift to state 57
-- On IF shift to state 162
-- On FUN shift to state 163
-- On FORALL shift to state 175
-- On FLOAT shift to state 58
-- On FALSE shift to state 157
-- On EXISTS shift to state 176
-- On CHAR shift to state 158
-- On ATTRIBUTE shift to state 75
-- On uqualid shift to state 177
-- On uident shift to state 186
-- On term_sub_ shift to state 187
-- On term_dot_ shift to state 188
-- On term_dot shift to state 189
-- On term_block_ shift to state 192
-- On term_arg_ shift to state 193
-- On term_arg shift to state 194
-- On term_ shift to state 197
-- On term shift to state 341
-- On quant shift to state 206
-- On qualid shift to state 224
-- On prefix_op shift to state 225
-- On op_symbol shift to state 227
-- On mk_term(term_dot_) shift to state 228
-- On mk_term(term_arg_) shift to state 229
-- On mk_term(term_) shift to state 230
-- On lqualid shift to state 231
-- On lident_rich shift to state 182
-- On lident_op_id shift to state 183
-- On lident shift to state 232
-- On ident_rich shift to state 233
-- On constant shift to state 234
-- On attr shift to state 235
## Reductions:
